--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -12,13 +12,13 @@
 en: &DEFAULT_EN
   header:
     title: !
-    text: 저의 포트폴리오를 소개드립니다
+    text: <br>저의 포트폴리오를 소개드립니다<br><br>
     button: 보러 가기
     buttonlink: "#services"
 
   services:
-    title: "Services"
-    text: "Lorem ipsum"
+    title: "기술 스택"
+    text: "Tech Stack"
     section: services
     list:
       - title: "E-Commerce"
@@ -32,14 +32,14 @@ en: &DEFAULT_EN
         icon: fab fa-markdown
 
   portfolio:
-    title: "Portfolio"
-    text: "Lorem ipsum dolor sit amet consectetur."
+    title: "프로젝트"
+    text: "Project"
     section: portfolio
     closebutton: "Close Project"
 
   timeline:
-    title: "Timeline"
-    text: "Lorem ipsum timeline"
+    title: "경력"
+    text: "Career"
     section: timeline
     # left is the default
     #start_align: "left"
@@ -69,8 +69,8 @@ en: &DEFAULT_EN
     end: "Be Part <br> of Our <br> Story!"
 
   about:
-    title: "About Us"
-    text: "our story"
+    title: "저는.."
+    text: "About"
     body: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde. **Markdown** supported."
     section: about
 
