--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -66,10 +66,10 @@ en: &DEFAULT_EN
         alt:
         # you can enforce the alignment
         align: right
-    end: "Be Part <br> of Our <br> Story!"
+    end: "저와 함께 <br> 만들어 <br> 가시죠!"
 
   about:
-    title: "저는..."
+    title: "저는.."
     text: "About"
     body: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde. **Markdown** supported."
     section: about
