--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -14,12 +14,12 @@ en: &DEFAULT_EN
     title: !
     text: <br>저의 포트폴리오를 소개드립니다<br><br>
     button: 보러 가기
-    buttonlink: "#services"
+    buttonlink: "#stacks"
 
-  services:
+  stacks:
     title: "기술 스택"
     text: "Tech Stack"
-    section: services
+    section: stacks
     list:
       - title: "E-Commerce"
         desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit."
@@ -123,7 +123,7 @@ es: &DEFAULT_ES
     button: Ver más
     buttonlink: "#servicios"
 
-  services:
+  stacks:
     title: "Servicios"
     text: "Lorem ipsum"
     section: servicios
