--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -89,7 +89,7 @@ en: &DEFAULT_EN
   about:
     title: "저는.."
     text: "About"
-    body: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde. **Markdown** supported."
+    body: "외국계 인증 업체에서 소프트웨어 인증 업무를 전담하다 개발자로 전향했습니다.<br>소프트웨어 인증을 통해 소프트웨어 개발 라이프 사이클을 이해하며 최고의 품질을 가진 소프트웨어를 개발하고 싶습니다!"
     section: about
 
   clients:
