--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,13 +13,13 @@ en: &DEFAULT_EN
   nav:
     - title: "Stack"
       section: stack
-    - title: "Project"
+    - title: "Projects"
       section: portfolio
     - title: "About"
       section: about
     - title: "Career"
       section: timeline
-      
+
 en-US:
   <<: *DEFAULT_EN
 en-CA:
