--- a/_config.yml
+++ b/_config.yml
@@ -17,13 +17,13 @@ remote_theme: raviriley/agency-jekyll-theme
 #url    : https://jw-portfolio.github.io # the base hostname & protocol for your site, e.g. http://example.com
 #baseurl: "/agency-jekyll-theme" # the subpath of your site, e.g. /blog
 
-title      : JW Park
-email      : jejeoppa@example.com #this is also the email contact forms will go to
+title: JW Park
+email: jejeoppa@naver.com #this is also the email contact forms will go to
 description: "Agency Bootstrap theme converted to a Jekyll theme, plus new features: Google Analytics, Markdown support, custom pages, and more!"
-author     : 박종원
+author: 박종원
 # logo:     #optional, defaults to site title
-  # path: assets\img\clients\creative-market.jpg
-  # height: 60 #height in px, defaults to 52px
+# path: assets\img\clients\creative-market.jpg
+# height: 60 #height in px, defaults to 52px
 
 locale: "en-US" # See available languages in _data/sitetext.yml
 
